@@ -1,3 +1,9 @@
+2003-06-29  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b38
+	
+	* upgrade album version to 12, to change item owner names
+	  from "nobody" to album owner.  This is for people who
+	  upgraded between b32 and b36.
+
 2003-06-29  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b37
 	
 	* During upgrade, item owner for all items will default to album owner, 
